[project]
name = "survai-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes==0.43",
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lighteval>=0.5.0",
    "numpy==1.*",
    "peft>=0.13.0",
    "scikit-learn>=1.5.2",
    "setuptools>=75.1.0",
    "transformers>=4.45.1",
    "trl>=0.11.1",
    "wandb>=0.18.3",
]
